@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>me.chrisswr1</groupId>
 		<artifactId>build-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>2.3.2-SNAPSHOT</version>
 	</parent>
 
 	<!-- project identifier -->
@@ -24,32 +24,34 @@
 		<!-- technically-based properties -->
 		<project.module-root.relativedir>${project.parent.relativedir}../</project.module-root.relativedir>
 		<java.rootPackage>${project.groupId}.${java.package}</java.rootPackage>
-		<mainClass.localPath />
+		<mainClass.localPath>Main</mainClass.localPath>
 		<mainClass.fullPath>${java.rootPackage}.${mainClass.localPath}</mainClass.fullPath>
+		<java.filteredSource.dir>${project.build.directory}/filtered-sources/java</java.filteredSource.dir>
 
 		<!-- project-specific properties -->
 		<java.package>${project.artifactId}</java.package>
 		<obfuscate>true</obfuscate>
 
 		<!-- dependency versions -->
-		<graalvm.version>21.2.0</graalvm.version>
-		<jetbrains-annotations.version>22.0.0</jetbrains-annotations.version>
-		<lombok.version>1.18.20</lombok.version>
+		<graalvm.version>24.1.1</graalvm.version>
+		<jetbrains-annotations.version>26.0.1</jetbrains-annotations.version>
+		<jcip-annotations.version>1.0-1</jcip-annotations.version>
+		<spotbugs.version>4.8.6</spotbugs.version>
+		<lombok.version>1.18.34</lombok.version>
 		<lombok-pg.version>0.11.3</lombok-pg.version>
-		<slf4j.version>1.7.32</slf4j.version>
-		<proguard.annotations.version>7.1.1</proguard.annotations.version>
-		<junit.jupiter.version>5.8.0</junit.jupiter.version>
-		<junit.platform.version>1.8.0</junit.platform.version>
-		<junit.platform.surefire.version>1.3.2</junit.platform.surefire.version>
-		<mockito.version>3.12.4</mockito.version>
+		<slf4j.version>2.0.16</slf4j.version>
+		<proguard.annotations.version>7.6.0</proguard.annotations.version>
+		<junit.minor-version>11.3</junit.minor-version>
+		<junit.jupiter.version>5.${junit.minor-version}</junit.jupiter.version>
+		<junit.platform.version>1.${junit.minor-version}</junit.platform.version>
+		<mockito.version>5.14.2</mockito.version>
 
 		<!-- plugin versions -->
-		<plugin.proguard.version>2.4.0</plugin.proguard.version>
-		<plugin.spotbugs.version>4.3.0</plugin.spotbugs.version>
-		<plugin.surefire.version>3.0.0-M5</plugin.surefire.version>
-		<plugin.shade.version>3.2.4</plugin.shade.version>
-		<!-- maven-javadoc-plugin in version 3.3.0 is not compatible with maven-site-plugin -->
-		<plugin.javadoc.version>3.2.0</plugin.javadoc.version>
+		<plugin.proguard.version>2.6.1</plugin.proguard.version>
+		<plugin.spotbugs.version>${spotbugs.version}.5</plugin.spotbugs.version>
+		<plugin.surefire.version>3.5.2</plugin.surefire.version>
+		<plugin.shade.version>3.6.0</plugin.shade.version>
+		<plugin.javadoc.version>3.11.1</plugin.javadoc.version>
 
 		<!-- JavaDoc URLs -->
 		<lombok.javadoc-url>https://projectlombok.org/api</lombok.javadoc-url>
@@ -74,6 +76,16 @@
 		</dependency>
 
 		<!-- default dependencies -->
+		<dependency>
+			<groupId>com.github.stephenc.jcip</groupId>
+			<artifactId>jcip-annotations</artifactId>
+			<version>${jcip-annotations.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.spotbugs</groupId>
+			<artifactId>spotbugs-annotations</artifactId>
+			<version>${spotbugs.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -123,7 +135,13 @@
 	</dependencies>
 
 	<build>
+		<sourceDirectory>${java.filteredSource.dir}</sourceDirectory>
 		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<filtering>true</filtering>
+				<targetPath>${java.filteredSource.dir}</targetPath>
+			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
@@ -148,8 +166,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${plugin.compiler.version}</version>
 					<configuration>
-						<source>${java.version.prefixed}</source>
-						<target>${java.version.prefixed}</target>
+						<source>${java.version.qualified}</source>
+						<target>${java.version.qualified}</target>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -190,12 +208,28 @@
 						</execution>
 					</executions>
 					<configuration>
+						<injarNotExistsSkip>true</injarNotExistsSkip>
 						<obfuscate>${obfuscate}</obfuscate>
 						<options>
+							<!-- control options -->
 							<option>-allowaccessmodification</option>
 							<option>-keepattributes Signature</option>
+							<option>-keepattributes RuntimeVisibleAnnotations</option>
+
+							<!-- keep Java language specific objects -->
+							<option>-keepclassmembers class * implements java.io.Serializable { static final long serialVersionUID; }</option>
+
+							<!-- keep JPA specific objects -->
+							<option>-keep @jakarta.persistence.Embeddable public class *</option>
+							<option>-keep @jakarta.persistence.Entity public class *</option>
+							<option>-keepclassmembers @jakarta.persistence.Entity public class * { @jakarta.persistence.Id *; }</option>
+							<option>-keepclassmembers @jakarta.persistence.Entity public class * { @jakarta.persistence.EmbeddedId *; }</option>
+
+							<!-- keep main class -->
 							<option>-keep public class ${mainClass.fullPath}</option>
 							<option>-keepclassmembers public class ${mainClass.fullPath} { public *; }</option>
+
+							<!-- keep annotated objects -->
 							<option>-keep @proguard.annotation.Keep public interface *</option>
 							<option>-keep @proguard.annotation.Keep public class *</option>
 							<option>-keep @proguard.annotation.Keep public enum *</option>
@@ -234,6 +268,7 @@
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>${plugin.javadoc.version}</version>
 					<configuration>
+						<source>${java.version}</source>
 						<keywords>true</keywords>
 						<serialwarn>true</serialwarn>
 						<links>
@@ -328,10 +363,41 @@
 			</build>
 		</profile>
 		<profile>
+			<id>jdk-16</id>
+			<activation>
+				<jdk>[16,)</jdk>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<artifactId>maven-compiler-plugin</artifactId>
+							<configuration>
+								<fork>true</fork>
+								<compilerArgs>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+								</compilerArgs>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+		<profile>
 			<id>obfuscate</id>
 			<activation>
 				<file>
 					<exists>src/main/java</exists>
+					<missing>src/main/webapp</missing>
 				</file>
 				<property>
 					<name>fullBuild</name>
@@ -372,6 +438,11 @@
 		</profile>
 		<profile>
 			<id>executable</id>
+			<activation>
+				<property>
+					<name>executable</name>
+				</property>
+			</activation>
 			<build>
 				<pluginManagement>
 					<plugins>
